# 2048_rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs
