[package]
authors = ["Stanislav Lyubovsky <wallseat@gmail.com>"]
description = "2048 game written in Rust"
edition = "2021"
license = "MIT"
name = "rust_2048"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
ctrlc = {version = "3.0", features = ["termination"]}
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
